{
    "name": "Input",
    "maps": [
        {
            "name": "mainControls",
            "id": "a39b9878-5768-4b10-affa-e09670660a88",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "ddc092aa-6fe2-4fd3-88a8-2a919f9c96be",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "21faa0df-8851-4084-adbc-0acd2d8d53e4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "ce1b4ab6-758e-4f8b-9295-14f74cf88cbc",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c9a558b0-db18-4d09-a651-bffc4cff217c",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b095b899-71ad-4b32-94a3-5a844769727f",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "897f2e3f-15b0-4f8a-a510-33d0522a50d1",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}